@@ -2,7 +2,6 @@ package ru.mralexeimk.objector;
 
 import ru.mralexeimk.objector.models.*;
 import ru.mralexeimk.objector.other.LayerType;
-import ru.mralexeimk.objector.singletons.Objects;
 
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -10,20 +9,20 @@ import java.util.List;
 
 public class Main {
     //MNIST test
-    private static List<Layer> layers = new ArrayList<>(Arrays.asList(
-            new InputLayer(1, 28, LayerType.INPUT),
-            new FilterLayer(8, 24, LayerType.FILTER),
-            new PullingLayer(8, 12, LayerType.PULLING),
-            new FilterLayer(32, 8, LayerType.FILTER),
-            new PullingLayer(32, 4, LayerType.PULLING),
-            new NeuronsLayer(512, 1, LayerType.NEURONS),
-            new OutputLayer(10, 1, LayerType.OUTPUT)
+    private static List<List<Layer>> layers = new ArrayList<>(Arrays.asList(
+            List.of(new InputLayer(1, 28, 0, LayerType.INPUT)),
+            List.of(new FilterLayer(8, 24, 0, LayerType.FILTER)),
+            List.of(new PullingLayer(8, 12, 0, LayerType.PULLING)),
+            List.of(new FilterLayer(32, 8, 0, LayerType.FILTER)),
+            List.of(new PullingLayer(32, 4, 0, LayerType.PULLING)),
+            List.of(new NeuronsLayer(512, 1, LayerType.NEURONS)),
+            List.of(new OutputLayer(1, 1, LayerType.OUTPUT))
     ));
 
-    private static List<Layer> layers2 = new ArrayList<>(Arrays.asList(
-            new InputLayer(1, 28, LayerType.INPUT),
-            new NeuronsLayer(60, 1, LayerType.NEURONS),
-            new OutputLayer(10, 1, LayerType.OUTPUT)
+    private static List<List<Layer>> layers2 = new ArrayList<>(Arrays.asList(
+            List.of(new InputLayer(1, 28, 0, LayerType.INPUT)),
+            List.of(new NeuronsLayer(120, 1, LayerType.NEURONS)),
+            List.of(new OutputLayer(10, 1, LayerType.OUTPUT))
     ));
 
     public static void main(String[] args) {
@@ -32,20 +31,13 @@ public class Main {
     }
 
     public static void mnistTest() {
-        NeuralNetwork nn = new NeuralNetwork(layers, 0.2);
+        NeuralNetwork nn = new NeuralNetwork(layers, 0.1);
         nn.printData();
         nn.printWeights();
-        for(int i = 0; i < 100; ++i) nn.trainFromFile("/test/mnist_test_10.csv");
+        for(int i = 0; i < 10; ++i) nn.trainFromFile("/train/mnist_train.csv");
         nn.printData();
         nn.printWeights();
-        nn.testFromFile("/test/mnist_test_10.csv");
-    }
-
-    public static void mnistTestMultiNet() {
-        Objects.init("MNIST");
-        Objects.addAllObjects(new ArrayList<>(List.of("0", "1", "2", "3", "4", "5", "6", "7", "8", "9")));
-        for(int i = 0; i < 100; ++i) Objects.trainFromFile("/train/mnist_train_100.csv");
-        Objects.testFromFile("/test/mnist_test_10.csv");
-        Objects.saveToFilesCurrentThread();
+        nn.testFromFile("/test/mnist_test.csv");
+        nn.saveWeights("mnist");
     }
 }
